syntax = "proto3";

option go_package = "github.com/fine-track/journals-app/pb";

import "record.proto";

service RecordsService {
	rpc Create(CreateRecordRequest) returns (UpdateRecordResponse) {}

	rpc Update(Record) returns (UpdateRecordResponse) {}

	rpc Delete(DeleteRecordRequest) returns (DeleteRecordResponse) {}

	rpc GetRecords(GetRecordsRequest) returns (GetRecordsResponse) {}

	rpc Ping(PingRequest) returns (PingResponse) {}
}

message DeleteRecordRequest {
	string id = 1;
}

message DeleteRecordResponse {
	bool	success = 1;
	string	message	= 3;
}

message UpdateRecordResponse {
	bool	success	= 1;
	Record	record	= 2;
	string	message	= 3;
}

message GetRecordsRequest {
	RecordType	type	= 1;
	int32		page	= 2;
	string		user_id	= 3;
}

message GetRecordsResponse {
	bool			success		= 1;
	repeated Record	records		= 2;
	int32			next_page	= 3;
	string			message		= 4;
}

message PingRequest {
	string	message	= 1;
}

message PingResponse {
	string	message		= 1;
	string	response	= 2;
}
